[package]
name = "box_game"
version = "0.6.0"
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
description = "A demo game where two web browser can connect and move boxes around"
edition = "2021"
repository = "https://github.com/johanhelsing/matchbox"
keywords = ["gamedev", "webrtc", "peer-to-peer", "networking", "wasm"]
license = "MIT OR Apache-2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
  "Document",
  "Location", # for getting args from query string
] }
serde_qs = "0.12"
wasm-bindgen = "0.2"
ggrs = { version = "0.9", features = ["wasm-bindgen"] }

[dependencies]
bevy_matchbox = { version = "0.6", features = ["ggrs"] }
bevy = { version = "0.10", default-features = false, features = [
  "bevy_gltf",
  "bevy_winit",
  "bevy_render",
  "bevy_pbr",
  "bevy_core_pipeline",
  "bevy_ui",
  "bevy_text",
  "bevy_asset",
  "bevy_sprite",
  "png",
  # gh actions runners don't like wayland
  "x11",
] }
ggrs = "0.9"
bevy_ggrs = "0.12"
bytemuck = { version = "1.7", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
serde = "1.0"
rand = "0.8"

[profile.wasm-release]
# Use release profile as default values
inherits = "release"

# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"

# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
lto = "fat"

# When building crates, optimize larger chunks at a time
# Slows compile times, marginal improvements
codegen-units = 1
